syntax = "proto3";

package hello.service.v1alpha1;

option go_package = "github.com/marty-anz/hello-grpcgo-render/pkg/hello/service/v1alpha1;v1alpha1";

service Hello {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}
  rpc SayHelloError(SayHelloErrorRequest) returns (SayHelloResponse) {}
}

message Info {
  int32 n = 1;
  string m = 2;
}

message EchoRequest {
  string str = 1;
  Info info = 2; // {}, null
}

message EchoResponse {
  string str = 1;
  Info info = 2;
}

message SayHelloRequest {}

message SayHelloResponse {
  string message = 1;
  int32 number = 2;
}


message SayHelloErrorRequest {
  int32 code = 1;
}
